--- a/index.html
+++ b/index.html
@@ -2,20 +2,84 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=1, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-  <title>Jose Maestri</title>
+  <title>The Jamlot</title>
 </head>
 <body>
-  <div class="container">
+  <header class="container">
     <div class="row">
       <div class="col">
-        <h1>Jose Maestri</h1>
+        <h1>Welcome to The Jamlot</h1>
+      </div>
+      <div class="col">
+        <ul class="nav">
+          <li><a href="#work">Work</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
       </div>
     </div>
-  </div>
+  </header>
+  <section class="container" id="work">
+    <div class="row">
+      <div class="col">
+        <h2>Work</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h3>Code</h3>
+      </div>
+      <div class="col">
+        <h3>Events</h3>
+      </div>
+    </div>
+  </section>
+  <section class="container" id="about">
+    <div class="row">
+      <div class="col">
+        <h2>About</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-9">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio facilis inventore eveniet quisquam at vitae quae nostrum saepe! Modi, a perspiciatis! Quibusdam est aut ex voluptatem. Vel itaque sint unde.</p>
+      </div>
+      <div class="col-3">
+        <img src="" alt="">
+      </div>
+    </div>
+  </section>
+  <section class="container" id="contact">
+    <div class="row">
+      <div class="col">
+        <h2>Contact</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h3>Message Me</h3>
+        <form action="">
+          <label for="name">Name</label>
+          <input type="text" name="name" />
 
+          <input type="submit" value="Submit" />
+        </form>
+      </div>
+      <div class="col">
+        <h3>Find Me</h3>
+        <ul class="social">
+          <li><a href=""><i class="bi-instagram"></i></a></li>
+          <li><a href=""><i class="bi-facebook"></i></a></li>
+          <li><a href=""><i class="bi-linkedin"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  
+  
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
