--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <title>The Jamlot</title>
+  <title>Jose Maestri</title>
 </head>
 <body>
   <header class="container">
     <div class="row">
       <div class="col">
-        <h1>Welcome to The Jamlot</h1>
+        <h1>Welcome to my site</h1>
       </div>
       <div class="col">
         <ul class="nav">
